added progress bar + functionality to continue watching their videos , configured 2. backend to more powerful pi5

--- a/src/app/main-content/slider-comp/slider-comp.component.html
+++ b/src/app/main-content/slider-comp/slider-comp.component.html
@@ -46,6 +46,7 @@
               (mouseleave)="hoveredIndex4 = -1"
               class="grow-shadow"
               [videoItem]="item"
+              [isVideosWatched]="true"
               [isHovered]="hoveredIndex4 === i" 
             ></app-video-item>
           </div>
