--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -2,8 +2,7 @@
 
 .videoitem-cont {
   @include dFlex(column, center, flex-start);
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+  border-radius: 14px;
   > span {
     color: #ffffff;
     font-size: 18px;
@@ -11,12 +10,12 @@
   > img {
     height: 160px;
     width: 270px;
-    border-top-right-radius: 4px;
-    border-top-left-radius: 4px;
-    box-shadow: 0px 20px 10px -5px rgba(0, 0, 0, 0.7), 
-                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
-                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
-                0px 10px 10px -5px rgba(0, 0, 0, 0.7),
+    object-fit: cover;
+    border-radius: 14px;
+    box-shadow: 0px 20px 10px -5px rgba(0, 0, 0, 0.7),
+      0px 10px 10px -5px rgba(0, 0, 0, 0.7),
+      0px 10px 10px -5px rgba(0, 0, 0, 0.7),
+      0px 10px 10px -5px rgba(0, 0, 0, 0.7);
   }
   > .info-cont {
     transition: all 0.3s ease-in-out;
@@ -28,21 +27,36 @@
     color: #ffffff;
     margin-top: -160px;
     height: 160px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    > .info-head {
+    border-radius: 12px;
+    > .info-head-invis {
+      transition: all 0.3s ease-in-out;
       @include dFlex(row, space-between, center);
       padding: 4px 6px;
+      opacity: 0;
+      border-radius: 12px;
       > div {
         width: 50%;
+        border-radius: 12px;
       }
       > .end {
-        @include dFlex(row, flex-end, center)
+        @include dFlex(row, flex-end, center);
+        border-radius: 12px;
       }
     }
-    > .description-foot {
-      @include dFlex(column, center, flex-start);
-      padding: 0px 6px;
+    > .info-head-vis {
+      transition: all 0.3s ease-in-out;
+      @include dFlex(row, space-between, center);
+      padding: 4px 6px;
+      opacity: 1;
+      border-radius: 12px;
+      > div {
+        width: 50%;
+        border-radius: 12px;
+      }
+      > .end {
+        @include dFlex(row, flex-end, center);
+        border-radius: 12px;
+      }
     }
   }
   > .vis {
@@ -53,3 +67,45 @@
   }
 }
 
+.watched-cont {
+  height: 10px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+
+  > progress[value] {
+    /* Reset the default appearance */
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    border: none; 
+  }
+
+  /* Background style */
+  > progress[value]::-webkit-progress-bar {
+    background-color: rgba($color: #141414, $alpha: 0.7);
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+  }
+
+  /* Progressionbar style */
+  > progress[value]::-webkit-progress-value {
+    background-image: 
+    -webkit-linear-gradient(left, #2e3edf, #800bff);
+    border-bottom-left-radius: 12px;
+  }
+  
+  > progress.completed::-webkit-progress-value {
+    border-bottom-right-radius: 12px;
+  }
+
+  /* Firefox */
+  > progress[value]::-moz-progress-bar {
+    background-image: 
+    -webkit-linear-gradient(left, #2e3edf, #800bff);
+    border-bottom-left-radius: 12px;
+  }
+}
