--- a/src/app/foot/imprint/imprint.component.html
+++ b/src/app/foot/imprint/imprint.component.html
@@ -1,1 +1,20 @@
-<p>imprint works!</p>
+<section class="imprint-cont">
+  <app-header [isImprint]="true" [isLoginScreen]="true"></app-header>
+
+  <div class="content">
+    <div class="first">
+      <h1>Impressum</h1>
+      <span>Sebastian Wolff</span>
+      <span>Klosterberg 2</span>
+      <span>OT: Oldisleben</span>
+      <span>06577 An der Schmücke</span>
+    </div>
+
+    <div class="first">
+      <h4>Kontakt</h4>
+      <span>Mobil: 017664370553</span>
+      <span>E-Mail: bastiwolff432&#64;gmail.com</span>
+      <a href="#">e-recht24.de</a>
+    </div>
+  </div>
+</section>
