--- a/src/app/head/header/header.component.html
+++ b/src/app/head/header/header.component.html
@@ -10,4 +10,7 @@
             <span>Login</span>
         </a>
     </div>
+    <div *ngIf="isImprint" class="right-imprint-cont" (click)="stepBack()">
+        <mat-icon>arrow_back</mat-icon>
+    </div>
 </div>
