--- a/src/app/foot/footer/footer.component.scss
+++ b/src/app/foot/footer/footer.component.scss
@@ -16,6 +16,8 @@
         font-weight: 500;
         font-size: 18px;
         cursor: pointer;
+        color: #ffffffff;
+        text-decoration: none;
         &:hover {
             text-decoration: underline;
             //font-size: 20px
