--- a/src/app/foot/imprint/imprint.component.scss
+++ b/src/app/foot/imprint/imprint.component.scss
@@ -1,1 +1,40 @@
 @import "../../../styles.scss";
+
+.imprint-cont {
+  max-width: 1920px;
+  height: 100vh;
+  width: 100%;
+  @include dFlex(column, flex-start, center);
+  margin: 0px 124px;
+
+  > .content{
+    @include dFlex(column, center, flex-start);
+    gap: 40px;
+    width: 100%;
+    color: #ffffff;
+    > .first {
+        @include dFlex(column, center, flex-start);
+        gap: 8px;
+        > h1 {
+           font-size: 56px 
+        }
+        >span {
+            font-size: 24px;
+        }
+        > h4 {
+            font-size: 40px;
+            margin-bottom: 40px;
+        }
+        > a {
+            font-size: 24px;
+            text-decoration: none;
+            color: #ffffff;
+            &:hover {
+                cursor: pointer;
+                text-decoration: underline;
+            }
+        }
+    }
+  }
+
+}
