videoplayer rework, bugfix pw reset, some styling changes

--- a/src/app/authentication/landingpage/landingpage.component.html
+++ b/src/app/authentication/landingpage/landingpage.component.html
@@ -21,7 +21,7 @@
         }
       </mat-form-field>
       <div (click)="checkMail()" type="button" class="login-btn">
-        <div>Einloggen</div>
+        <div>Loslegen <mat-icon>chevron_right</mat-icon> </div>
       </div>
     </div>
   </div>
