--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,10 +1,7 @@
 <section class="register-cont">
   <div class="header-cont">
     <div class="logo">
-      <!-- <span>CHILL</span>
-      <span class="n-letter">'N'</span>
-      <span>FLIX</span> -->
-      <img src="./../../../assets/logos/Logo.png" alt="videoflix-logo">
+      <img src="./assets/logos/Logo.png" alt="videoflix-logo">
     </div>
     <div class="right-cont">
       <a [routerLink]="['/login']" class="login-btn">
