--- a/src/app/authentication/registration/step-0/step-0.component.html
+++ b/src/app/authentication/registration/step-0/step-0.component.html
@@ -1,5 +1,5 @@
 <div class="stepping">
-  <img src="../../../../assets/img/Devices_modified.png" />
+  <img src="./assets/img/Devices_modified.png" />
   <span>SCHRITT 1 VON 3</span>
   <h2>Einrichtung Ihres Kontos abschliessen</h2>
   <p>
