--- a/src/app/foot/imprint/imprint.component.html
+++ b/src/app/foot/imprint/imprint.component.html
@@ -14,7 +14,7 @@
       <h4>Kontakt</h4>
       <span>Mobil: 017664370553</span>
       <span>E-Mail: bastiwolff432&#64;gmail.com</span>
-      <a href="#">e-recht24.de</a>
+      <a href="https://www.e-recht24.de">e-recht24.de</a>
     </div>
   </div>
 </section>
