--- a/src/app/head/profile-header/profile-header.component.html
+++ b/src/app/head/profile-header/profile-header.component.html
@@ -5,11 +5,11 @@
       <span class="n-letter">'N'</span>
       <span>FLIX</span>
     </div> -->
-    <img src="./../../../assets/logos/Logo.png" alt="logo">
+    <img src="./assets/logos/Logo.png" alt="logo">
   </div>
   <div class="right-cont">
     <div class="drop-down-btn" (click)="toggleArrow()" [matMenuTriggerFor]="menu">
-      <img src="../../../assets/avatare/avatar1.png" alt="" />
+      <img src="./assets/avatare/avatar1.png" alt="" />
       <mat-icon [ngClass]="menuIsOpen ? 'arrow-drop-down' : 'arrow-drop-up'"
         >arrow_drop_down</mat-icon
       >
