--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -35,7 +35,7 @@
               [type]="hide() ? 'password' : 'text'"
             />
             @if (password.invalid) {
-            <mat-error> Password muss aus 4 Zeichen bestehen </mat-error>
+            <mat-error> Passwort muss aus 4 Zeichen bestehen </mat-error>
             }
             <button
               mat-icon-button
@@ -56,7 +56,7 @@
           type="button"
           class="login-btn"
         > <div>
-            Einloggen
+            Login
           </div>
         </div>
       
