--- a/src/app/authentication/pw-reset/pw-reset.component.scss
+++ b/src/app/authentication/pw-reset/pw-reset.component.scss
@@ -93,14 +93,18 @@
   }
 }
 
+.centered {
+  justify-content: center !important;
+}
+
 .disabled {
-  background-color: grey;
-  cursor: not-allowed;
+  background-color: grey !important;
+  cursor: not-allowed !important;
 }
 
 .enabled {
     transition: all 0.3s ease-in-out;
-  background-color: #e50815;
+    background-color: #e50815;
   &:hover {
     cursor: pointer;
     background-color: #ac040f;
@@ -121,7 +125,7 @@
 input {
   color: #2e3edf !important;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   &::placeholder {
     color: #2e3edf !important;
   }
@@ -134,6 +138,15 @@ input {
 ::ng-deep .mdc-line-ripple::before {
   display: none;
   border-bottom-style: none;
+}
+
+::ng-deep .mat-mdc-form-field-infix {
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+}
+
+::ng-deep .mdc-floating-label--required:not(.mdc-floating-label--hide-required-marker)::after {
+  color: #2e3edf !important;
 }
 
 mat-label {
