--- a/src/app/head/header/header.component.html
+++ b/src/app/head/header/header.component.html
@@ -3,7 +3,7 @@
         <!-- <span>CHILL</span>
         <span class="n-letter">'N'</span>
         <span>FLIX</span> -->
-        <img src="./../../../assets/logos/Logo.png" alt="logo">
+        <img src="./assets/logos/Logo.png" alt="logo">
     </div>
     <div *ngIf="!isLoginScreen" class="right-cont">
         <a [routerLink]="['/login']" class="login-btn">
