--- a/src/app/main-content/preview-comp/preview-comp.component.html
+++ b/src/app/main-content/preview-comp/preview-comp.component.html
@@ -1,6 +1,6 @@
 <div class="preview-comp">
     <video #previewFrame [muted]="true">
-        <source src="./../../../assets/avatare/test.mp4" />
+        <source src="./assets/avatare/test.mp4" />
     </video>
 </div>
 <div class="gradient"></div>
